--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,16 @@
 
             <title>Conduit</title>
             <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
-            <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+            <link href="https://conduit-bucket2.s3.amazonaws.com/ionicons.min.css" rel="stylesheet" type="text/css">
             <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
                 rel="stylesheet" type="text/css">
             <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
             <link rel="stylesheet" href="//demo.productionready.io/main.css">
 
-            <script src="https://unpkg.com/htmx.org@1.6.1"
+            <script src="https://d30j9ylxarefk7.cloudfront.net/htmx.min.js"
                 integrity="sha384-tvG/2mnCFmGQzYC1Oh3qxQ7CkQ9kMzYjWZSNtrRZygHPDDqottzEJsqS4oUVodhW"
                 crossorigin="anonymous"></script>
-            <script src="https://unpkg.com/alpinejs@3.7.1/dist/cdn.min.js"
+            <script src="https://d30j9ylxarefk7.cloudfront.net/cdn.min.js"
                 defer
                 integrity="sha384-KLv/Yaw8nAj6OXX6AvVFEt1FNRHrfBHziZ2JzPhgO9OilYrn6JLfCR4dZzaaQCA5"
                 crossorigin="anonymous"></script>
