--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
             <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
             <link rel="stylesheet" href="//demo.productionready.io/main.css">
 
-            <script src="https://d30j9ylxarefk7.cloudfront.net/htmx.min.js"
+            <script src="https://unpkg.com/htmx.org@1.6.1"
                 integrity="sha384-tvG/2mnCFmGQzYC1Oh3qxQ7CkQ9kMzYjWZSNtrRZygHPDDqottzEJsqS4oUVodhW"
                 crossorigin="anonymous"></script>
-            <script src="https://d30j9ylxarefk7.cloudfront.net/cdn.min.js"
+            <script src="https://unpkg.com/alpinejs@3.7.1/dist/cdn.min.js"
                 defer
                 integrity="sha384-KLv/Yaw8nAj6OXX6AvVFEt1FNRHrfBHziZ2JzPhgO9OilYrn6JLfCR4dZzaaQCA5"
                 crossorigin="anonymous"></script>
