--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
 
             <title>Conduit</title>
             <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
-            <link href="https://d30j9ylxarefk7.cloudfront.net/ionicons.min.css" rel="stylesheet" type="text/css">
+            <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
             <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
                 rel="stylesheet" type="text/css">
             <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-            <link rel="stylesheet"//demo.productionready.io/main.css">
+            <link rel="stylesheet"https://d30j9ylxarefk7.cloudfront.net/main.css">
 
             <script src="https://unpkg.com/htmx.org@1.6.1"
                 integrity="sha384-tvG/2mnCFmGQzYC1Oh3qxQ7CkQ9kMzYjWZSNtrRZygHPDDqottzEJsqS4oUVodhW"
