--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
                 rel="stylesheet" type="text/css">
             <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
             <link rel="stylesheet" href="//demo.productionready.io/main.css">
+            <link rel="stylesheet" href="https://d30j9ylxarefk7.cloudfront.net/app.css">
 
             <script src="https://unpkg.com/htmx.org@1.6.1"
                 integrity="sha384-tvG/2mnCFmGQzYC1Oh3qxQ7CkQ9kMzYjWZSNtrRZygHPDDqottzEJsqS4oUVodhW"
